--- a/lib/components/fo_tab/fo_tab_panel_component.scss
+++ b/lib/components/fo_tab/fo_tab_panel_component.scss
@@ -5,7 +5,7 @@
 
     div#tabStrip {
         display: flex;
-        align-items: center;                
+        align-items: stretch;                
         div.tabButton {            
             flex: 1;
             text-align: center;
