--- a/lib/components/fo_carousel/fo_carousel_component.html
+++ b/lib/components/fo_carousel/fo_carousel_component.html
@@ -4,25 +4,36 @@
              [style.transform]="transform">
             <ng-content></ng-content>
         </div>
-
-        <div class="arrow"
-             [class.faded]="step <= 0"
-             id="arrow-left"> 
-            <material-button raised
-                             clear-size
-                             (click)="stepBy(-1)">
-                <material-icon icon="keyboard_arrow_left"></material-icon>
-            </material-button>
-        </div>
-        <div class="arrow"
-             [class.faded]="step >= slides.length - 1"
-             id="arrow-right">
-            <material-button raised
-                             clear-size
-                             (click)="stepBy(1)">
-                <material-icon class="clickable"
-                               icon="keyboard_arrow_right"></material-icon>
-            </material-button>
+        <ng-container *ngIf="showArrowButtons == true">
+            <div class="arrow"
+                 [class.faded]="step <= 0"
+                 id="arrow-left">
+                <material-button raised
+                                 clear-size
+                                 (click)="stepBy(-1)">
+                    <material-icon icon="keyboard_arrow_left"></material-icon>
+                </material-button>
+            </div>
+            <div class="arrow"
+                 [class.faded]="step >= slides.length - 1"
+                 id="arrow-right">
+                <material-button raised
+                                 clear-size
+                                 (click)="stepBy(1)">
+                    <material-icon class="clickable"
+                                   icon="keyboard_arrow_right"></material-icon>
+                </material-button>
+            </div>
+        </ng-container>
+        <div class="row"
+             *ngIf="showArrowButtons == false">
+            <div class="col text-center">
+                <material-radio-group class="no-left-margin">
+                    <material-radio *ngFor="let slide of slides; let i=index"
+                                    [checked]="step == i"
+                                    (checkedChange)="onButtonChange(i, $event)"></material-radio>
+                </material-radio-group>
+            </div>
         </div>
     </div>
 </div>
