--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -1,4 +1,4 @@
-<div class="row expand">
+<div class="row expand collapse">
     <div class="m7 l8 col">
         <h3 class="margin-bottom-none">
             {{label | name}}
