--- a/lib/components/fo_app_layout/fo_app_layout_component.scss
+++ b/lib/components/fo_app_layout/fo_app_layout_component.scss
@@ -111,7 +111,7 @@
                     div#main-row {
                         min-width: 315px;
                         #page-header {
-                            margin: 1rem 0;
+                            margin-bottom: 1rem;
                             border-bottom: 2px solid #555;
                             material-icon {
                                 ::ng-deep i {
