--- a/lib/components/fo_multi_input/fo_multi_input_component.html
+++ b/lib/components/fo_multi_input/fo_multi_input_component.html
@@ -10,7 +10,7 @@
   </material-input>
   <material-button raised
                    clear-size
-                   [disabled]="disabled || inputValue == null || inputValue.isEmpty || inputValue.length > maxCount || (control?.valid == false && value?.isNotEmpty == true)"
+                   [disabled]="disabled || inputValue == null || inputValue.isEmpty || (maxCount != null && inputValue.length > maxCount) || (control?.valid == false && value?.isNotEmpty == true)"
                    (trigger)="add()">
     <material-icon icon="add_outline"
                    size="small"></material-icon>
@@ -20,6 +20,4 @@
   <material-chip *ngFor="let item of value"
                  (remove)="remove(item)">{{item}}</material-chip>
 </div>
-<div class="margin-top-small margin-bottom-small error color-alert">
-    {{errorMessage}}
-</div>
+<div class="margin-top-small margin-bottom-small error color-alert"> {{errorMessage}} </div>
