--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -1,6 +1,8 @@
 @import 'package:angular_components/material_button/mixins';
 @import 'package:grid/constants.scss';
-.arrow {
+:host {
+  display: block;
+  .arrow {
     position: absolute;
     top: auto;
     bottom: 50%;
@@ -15,64 +17,60 @@
     -o-transition: opacity 200ms;
     transition: opacity 200ms;
     material-button {
-        @include button-background-color('[raised]', #fff);
-        background-color: #fff;
-        ::ng-deep material-icon {
-            i {
-                font-size: 3em;
-            }
+      @include button-background-color('[raised]', #fff);
+      background-color: #fff;
+      ::ng-deep material-icon {
+        i {
+          font-size: 3em;
         }
+      }
     }
-}
-
-.arrow.faded {
+  }
+  .arrow.faded {
     visibility: hidden;
-}
-
-#arrow-left {
+  }
+  #arrow-left {
     left: 0.5em;
     right: auto;
-}
-
-#arrow-right {
+  }
+  #arrow-right {
     left: auto;
     right: 0.5em;
-}
-
-#slide-container {
+  }
+  #slide-container {
     position: relative;
     overflow: hidden;
     #slide-transformer {
-        -webkit-transition: -webkit-transform 500ms;
-        -moz-transition: -moz-transform 500ms;
-        -ms-transition: -ms-transform 500ms;
-        -o-transition: -o-transform 500ms;
-        transition: transform 500ms;
-        white-space: nowrap;
+      -webkit-transition: -webkit-transform 500ms;
+      -moz-transition: -moz-transform 500ms;
+      -ms-transition: -ms-transform 500ms;
+      -o-transition: -o-transform 500ms;
+      transition: transform 500ms;
+      white-space: nowrap;
     }
     #slide-transformer {
-        ::ng-deep * {
-            white-space: initial;
-        }
+      ::ng-deep * {
+        white-space: initial;
+      }
     }
-}
-
-@media screen and (max-width: $medium-width-threshold) {
+  }
+  @media screen and (max-width: $medium-width-threshold) {
     .arrow {
-        top: -16px;
-        bottom: auto;
-        material-button {
-            ::ng-deep material-icon {
-                i {
-                    font-size: 1.3em;
-                }
-            }
+      top: auto;
+      bottom: 20px;
+      material-button {
+        ::ng-deep material-icon {
+          i {
+            font-size: 1.3em;
+          }
         }
+      }
     }
     #arrow-left {
-        left: 2px;
+      left: 2px;
     }
     #arrow-right {
-        right: 2px;
+      right: 2px;
     }
+  }
 }
