Youtube player now scrollable

--- a/lib/components/fo_youtube_player/fo_youtube_player_component.html
+++ b/lib/components/fo_youtube_player/fo_youtube_player_component.html
@@ -1,4 +1,5 @@
+<!-- This will be converted to an iframe by Youtube's internal script -->
 <div id="youtube-player-wrapper">
-    <!-- This will be converted to an iframe by Youtube internal script -->
-    <div [id]="elementId"></div>
+  <div [id]="elementId"></div>
+  <div class="overlay" [class.hidden]="overlayHidden"></div>
 </div>
