--- a/lib/components/fo_tab/fo_tab_panel_component.scss
+++ b/lib/components/fo_tab/fo_tab_panel_component.scss
@@ -1,7 +1,9 @@
 @import '../../colors';
 
 :host {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     div#tabStrip {
         display: flex;
