fixed issue with tab select style easing

--- a/lib/components/fo_tab/fo_tab_panel_component.scss
+++ b/lib/components/fo_tab/fo_tab_panel_component.scss
@@ -17,7 +17,10 @@
             cursor: pointer;
             padding: 1rem 0.5rem;                        
             @include boxShadow();
-            transition: color, background-color 300ms ease;
+            transition: color, background-color 300ms ease-in;
+            -webkit-transition: color, background-color 300ms ease-in;
+            -moz-transition: color, background-color 300ms ease-in;
+            -o-transition: color, background-color 300ms ease-in;        
         }        
     }
 }
