Capitalized FoDataTable confirm delete modal title

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -202,7 +202,7 @@
     </div>
 </div>
 
-<fo-modal title="{{msg.confirm()}}"
+<fo-modal title="{{msg.confirm() | name}}"
           [smallPadding]="false"
           [visible]="deleteBufferId != null"
           (visibleChange)="deleteBufferId = null"
