--- a/lib/components/fo_login/fo_login_component.html
+++ b/lib/components/fo_login/fo_login_component.html
@@ -24,7 +24,7 @@
       </form>
       <p *ngIf="showForgotPassword"
          class="forgot-password"
-         (click)="setState('forgot_password'">{{msg.forgot_password()}}?</p>
+         (click)="setState('forgot_password')">{{msg.forgot_password()}}?</p>
       <div class="button-container">
         <material-button raised
                          clear-size
