Lazy table filter now updates on change instead of on enter

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -15,9 +15,10 @@
         <material-input class="text-left"
                         [displayBottomPanel]="false"
                         [disabled]="disabled"
-                        label="{{filterLabel}}"
+                        label="{{msg.filter()}}"
                         trailingGlyph="search"
                         [(ngModel)]="searchPhrase"
+                        (change)="onFilterChange($event)"
                         (keyup)="onSearchKeyUp($event)">
         </material-input>
     </div>
