--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -17,6 +17,7 @@
     -o-transition: opacity 200ms;
     transition: opacity 200ms;
     material-button {
+      display:none;
       @include button-background-color('[raised]', #fff);
       background-color: #fff;
       ::ng-deep material-icon {
