--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -36,6 +36,9 @@ material-dialog {
                 margin-left: 0.5rem;
                 material-button {
                     color: $foColorSecondary;
+                    ::after{
+                        display:none;
+                    }
                 }
             }
         }
